<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.programacionmoviles.juanpabloarangoa.figurasgeometricas.MainActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <TableRow
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/figura"
                    android:textColor="@color/black"
                    android:textSize="23sp" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rCuadrado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectionFigureClicked"
                        android:text="@string/cuadrado"
                        android:checked="true"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rCirculo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectionFigureClicked"
                        android:text="@string/circulo"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rTriangulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectionFigureClicked"
                        android:text="@string/triangulo"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rCubo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectionFigureClicked"
                        android:text="@string/cubo"
                        android:textSize="16sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">>

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/parametros"
                    android:textColor="@color/black"
                    android:textSize="23sp" />

                <EditText
                    android:id="@+id/editor1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lado"
                    android:inputType="numberDecimal"/>

                <EditText
                    android:id="@+id/editor2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/altura"
                    android:visibility="invisible"/>
                <Button
                    android:id="@+id/bCalcular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calcular"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:onClick="onButtonCalcular"/>


            </LinearLayout>

        </TableRow>

    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/area"
                android:textColor="@color/black"
                android:textSize="23sp" />
            <TextView
                android:id="@+id/tArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:layout_weight="1"

                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perimetro"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tPerimetro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/tVolumenLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volumen"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:layout_weight="1"
                android:visibility="invisible"
                />
            <TextView
                android:id="@+id/tVolumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:layout_weight="1"
                android:visibility="invisible"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>
